# mcp-probe

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
.github/workflows/: publish.yml
sandbox_home/: .env  .netrc
sandbox_home/.aws/: credentials
sandbox_home/.docker/: config.json
sandbox_home/.ssh/: id_rsa
src/mcp_behave/: __init__.py  analyze.py  cli.py  probe.py  push.py  report.py
tests/: test_push.py
