[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-behave"
version = "0.1.0"
description = "Runtime behavioral auditor for MCP servers — strace-based scope-violation detection"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Navid Mirnoori Langeroudi", email = "navid72m@gmail.com" },
]
keywords = ["mcp", "security", "agents", "auditing", "strace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/navid72m/mcp-probe"
Issues = "https://github.com/navid72m/mcp-probe/issues"

[project.scripts]
mcp-behave = "mcp_behave.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_behave"]
